--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -401,7 +401,7 @@ function settings(){
   }
 }
 
-var countDownDate = new Date("May 25, 2023 15:00:00").getTime();
+var countDownDate = new Date("Mar 17, 2023 20:30:00").getTime();
 document.getElementById("ad_container").classList.remove("hidden");
 
 var x = setInterval(function() {
@@ -471,7 +471,9 @@ var x = setInterval(function() {
     clearInterval(x);
     document.getElementById("clock").remove();
     document.getElementById("ad_container").remove();
+    if(getCookie('coce')){
     startConfetti();
+    }
   }
   
 }, 1000);
