--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -491,7 +491,7 @@ function arorf(){
     eraseCookie('arorf');
   }
   else{
-    setCookie('arorf', 'true');
+    setCookie('arorf', 'true', '70');
   }
 }
 function coce(){
@@ -499,7 +499,7 @@ function coce(){
     eraseCookie('coce');
   }
   else{
-    setCookie('coce', 'true');
+    setCookie('coce', 'true', '70');
   }
 }
 function atc(){
@@ -507,7 +507,7 @@ function atc(){
     eraseCookie('atc');
   }
   else{
-    setCookie('atc', 'true');
+    setCookie('atc', 'true', '70');
   }
 }
 
