--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -15,7 +15,7 @@
   </span></a>
 
 <center id="preloader" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-  <video width="100" height="100" autoplay muted loop>
+  <video width="100" height="100" autoplay muted loop playsinline>
     <source src="Preloader.mp4" type="video/mp4">
   </video>
 </center>
