--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -323,7 +323,7 @@
     }
   }
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 1290px) {
   #ad{
     width:100vw;
     height: 0.5in;
@@ -344,6 +344,7 @@
     top:5%;
     left: 5%; 
     font-size:20px;
+    transform:scale(2);
   }
 }
 
