--- a/mcacountdown/beta/timer.html
+++ b/mcacountdown/beta/timer.html
@@ -22,7 +22,7 @@
 
 <center class="hidden" id="unfocused" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
 <h1>Window Lost Focus</h1>
-<p>We cannot guarantee an accurate countdown once the tab or window loses focus,<br>or if your device locks.<br>To restart the countdown, click this handy button, or reload the page.</p>
+<p>We cannot guarantee an accurate countdown once the tab loses focus.<br>To restart the countdown, click this handy button, or reload the page.</p>
 <br>
 <br>
 <a href="">Sync Countdown</a>
@@ -30,7 +30,7 @@
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
   <h1>Settings</h1>
-  <p>These options use cookies to work. If you wish to reject cookies, do not use these settings.</p>
+  <p>These options use cookies to work. By using them, you agree to cookies.</p>
   <br>
   <br>
   <a id="arorf" class="disabled" onclick="arorf();">Autosync Clock</a>
@@ -156,12 +156,16 @@
   text-align:center;
   }
   h1{
+    font-size: 42px;
     font-family: 'Fredoka One', cursive;
   color: #fff;
+  font-weight: 100;
   }
   p{
     font-family: 'Fredoka One', cursive;
   color:white;
+  font-size: 20px;
+  font-weight: 100;
   }
   a{
     font-family: 'Fredoka One', cursive;
@@ -326,15 +330,16 @@
   @media only screen and (max-width: 1290px) {
   #ad{
     width:100vw;
-    height: 0.5in;
+    height: 1in;
     border: none;
     border-top: 4px solid white;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 0%;
     box-shadow: none;
   }
   #ad_container{
     top: 100%;
+    height:1in;
   }
   #clock{
     font-size: 90pvw;
@@ -342,18 +347,25 @@
   #gear{
     z-index:100000;
     top:5%;
-    left: 5%; 
-    font-size:20px;
-    transform:scale(2);
+    left: 7%; 
+  }
+
+  #innergear{
+    font-size:30px;
   }
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 1300px) {
   #gear{
     top:95%;
     left: 3%; 
   }
-
+  #ad{
+    height:10vh;
+    width:50vw;
+    border-radius: 20px;
+    object-fit: cover;
+  }
 }
 
 </style>
