--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -21,16 +21,16 @@
 </center>
 
 <center class="hidden" id="unfocused" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-<h1>Window Lost Focus</h1>
-<p>We cannot guarantee an accurate countdown once the tab loses focus.<br>To restart the countdown, click this handy button, or reload the page.</p>
+<h1>Focus Lost</h1>
+<p>We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.</p>
 <br>
 <br>
-<a href="">Sync Countdown</a>
+<a href="">Sync</a>
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
   <h1>Settings</h1>
-  <p>These options use cookies to work. By using them, you agree to cookies.</p>
+  <p>By using these options, you agree to cookies.</p>
   <br>
   <br>
   <a id="arorf" class="disabled" onclick="arorf();">Autosync Clock</a>
