--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -177,6 +177,8 @@
     padding:20px;
     user-select:none;
     cursor:pointer;
+    font-size: 20px;
+  font-weight: 100;
   }
   a:hover{
     position:relative;
@@ -200,6 +202,8 @@
     padding:20px;
     user-select:none;
     cursor:pointer;
+    font-size: 20px;
+  font-weight: 100;
   }
   .enabled:hover{
     position:relative;
@@ -224,6 +228,8 @@
     padding:20px;
     user-select:none;
     cursor:pointer;
+    font-size: 20px;
+  font-weight: 100;
   }
   .disabled:hover{
     position:relative;
@@ -249,6 +255,8 @@
     padding:20px;
     user-select:none;
     cursor:pointer;
+    font-size: 20px;
+  font-weight: 100;
   }
   .warning:hover{
     position:relative;
