--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -29,8 +29,7 @@
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
-  <h1>Settings</h1>
-  <p>By using these options, you agree to cookies.</p>
+  <h1>Options</h1>
   <br>
   <br>
   <a id="arorf" class="disabled" onclick="arorf();">Autosync Clock</a>
@@ -53,6 +52,11 @@
   <br>
   <br>
   <a id="atc" class="warning" onclick="resetcookies();">Reset All</a>
+  <br>
+  <br>
+  <br>
+  <br>
+    <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
   </center>
 
 <center  id="wifi" class="hidden" style="margin: 0; position: absolute; top: 15%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
