--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -25,7 +25,7 @@
 <p>We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.</p>
 <br>
 <br>
-<a href="">Sync</a>
+<a href="">Sync Countdown</a>
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
@@ -56,7 +56,7 @@
   <br>
   <br>
   <br>
-    <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
+  <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
   </center>
 
 <center  id="wifi" class="hidden" style="margin: 0; position: absolute; top: 15%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
@@ -201,7 +201,7 @@
     background-color: #00ff40;
     text-decoration: none;
     color:black;
-    box-shadow: 0 7px 0 #003511;
+    box-shadow: 0 7px 0 #008f2d;
     border-radius:20px;
     padding:20px;
     user-select:none;
@@ -213,7 +213,7 @@
     position:relative;
     top:2px;
     margin-top: 2px;
-    box-shadow:0 5px 0 #003511;
+    box-shadow:0 5px 0 #008f2d;
   }
   .enabled:hover:active{
     position:relative;
@@ -298,7 +298,7 @@
     top:0px;
     margin-top: 0px;
     box-shadow:none;
-    color:#00ff88;
+    color:#00ff40;
   }
 
   .hidden{
