--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -26,6 +26,11 @@
 <br>
 <br>
 <a href="">Sync Countdown</a>
+<br>
+<br>
+<br>
+<br>
+<p style="font-size: 15px; color:#989898">Enable "Autosync Clock" in the options menu to skip this page.</p>
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
@@ -416,7 +421,9 @@ document.addEventListener( 'visibilitychange' , function() {
     if (document.hidden) {
       clearInterval(x);
       document.getElementById("clock").remove();
-      document.getElementById("unfocused").classList.remove("hidden");
+      if(!getCookie('arorf')){
+        document.getElementById("unfocused").classList.remove("hidden");
+      }
       document.getElementById("preloader").classList.add("hidden");
       document.getElementById("ad_container").remove();
       document.getElementById("gear").classList.add("hidden");
