--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -22,15 +22,10 @@
 
 <center class="hidden" id="unfocused" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
 <h1>Focus Lost</h1>
-<p>We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.</p>
+<p>We can't guarantee an accurate countdown if the tab loses focus.<br>To resync the countdown, click this button or reload the page.<br>Enable "Autosync Clock" in the options menu to skip this page.</p>
 <br>
 <br>
 <a href="">Sync Countdown</a>
-<br>
-<br>
-<br>
-<br>
-<p style="font-size: 15px; color:#989898">Enable "Autosync Clock" in the options menu to skip this page.</p>
 </center>
 
 <center class="hidden" id="settings" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
