--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -173,10 +173,10 @@
   }
   a{
     font-family: 'Fredoka One', cursive;
-    background-color: #6f00ff;
+    background-color: #8426ff;
     text-decoration: none;
     color:white;
-    box-shadow: 0 7px 0 #30006e;
+    box-shadow: 0 7px 0 #4d00b2;
     border-radius:20px;
     padding:20px;
     user-select:none;
@@ -188,7 +188,7 @@
     position:relative;
     top:2px;
     margin-top: 2px;
-    box-shadow:0 5px 0 #30006e;
+    box-shadow:0 5px 0 #4d00b2;
   }
   a:hover:active{
     position:relative;
@@ -311,10 +311,10 @@
 
   @keyframes backgroundgradient{
     0%{
-      color: #6f00ff;
+      color: #8426ff;
     }
     10%{
-      color: #6f00ff;
+      color: #8426ff;
     }
     25%{
       color: #3ab6ff;
@@ -335,7 +335,7 @@
       color: #ff9900;
     }
     100%{
-      color: #6f00ff;
+      color: #8426ff;
     }
   }
 
