--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
 <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -142,7 +142,7 @@
     align-items: center;
     text-align: center;
     min-height: 99%;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     color:white;
   }
   .clock{
@@ -151,7 +151,7 @@
     align-items: center;
     text-align: center;
     min-height: 99%;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     animation: backgroundgradient 100s infinite;
   }
   .center{
@@ -161,18 +161,18 @@
   }
   h1{
     font-size: 42px;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
   color: #fff;
   font-weight: 100;
   }
   p{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
   color:white;
   font-size: 20px;
   font-weight: 100;
   }
   a{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     background-color: #8426ff;
     text-decoration: none;
     color:white;
@@ -197,7 +197,7 @@
     box-shadow:none;
   }
   .enabled{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     background-color: #00ff40;
     text-decoration: none;
     color:black;
@@ -223,7 +223,7 @@
   }
 
   .disabled{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     background-color: #595959;
     text-decoration: none;
     color:white;
@@ -250,7 +250,7 @@
 
 
   .warning{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     background-color: #ff5353;
     text-decoration: none;
     color:#ffffff;
@@ -276,7 +276,7 @@
   }
 
   .settings{
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Fredoka One';
     background-color: transparent;
     text-decoration: none;
     color:#ffffff;
