--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -14,6 +14,7 @@
   settings
   </span></a>
 
+
 <center id="preloader" style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
   <video width="100" height="100" autoplay muted loop playsinline>
     <source src="Preloader.mp4" type="video/mp4">
@@ -47,16 +48,15 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <a id="atc" class="warning" onclick="resetcookies();">Reset All</a>
   <br>
   <br>
   <br>
   <br>
-  <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.</p>
+  <p style="font-size: 15px; color:#989898">By using these options, you agree to cookies, extremely small files that store preferences in a browser. They will automatically be removed after 70 days, or if you disable the setting.
+  <br>
+  <br>
+  <a class="settings" href="cookiepolicy.html">Cookie Policy</a> </p>
   </center>
 
 <center  id="wifi" class="hidden" style="margin: 0; position: absolute; top: 15%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
