--- a/mcacountdown/cookiepolicy.html
+++ b/mcacountdown/cookiepolicy.html
@@ -21,6 +21,8 @@
               2. coce - This cookie saves the “Disable Confetti” option, and has a true/false, or boolean, content.
           <br>
               3. atc - This cookie saves the “Disable Text Animation” option, and has a true/false, or boolean, content.
+              <br>
+              4. lcdu - This cookie saves the "Label Countdown Units" option, and has a true/false, or boolean, content.
           <br>
           <br>
             We use cookies to improve the overall user experience, and give them more accessibility options and general settings. We only save cookies when a preference inside of the options/settings menu is enabled.
