--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -452,13 +452,18 @@ function settings(){
     document.getElementById("unfocused").classList.add("hidden");
 
 
+    document.getElementById("body").style.overflowY = '';
+    document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
   else{
     document.getElementById("clock").style.display = "";
     document.getElementById("settings").classList.add("hidden");
     document.getElementById("preloader").classList.add("hidden");
+    //document.getElementById("ad_container").classList.remove("hidden");
     document.getElementById("unfocused").classList.add("hidden");
 
+    document.getElementById("body").style.overflowY = 'hidden';
+    document.body.scrollTop = document.documentElement.scrollTop = 0;
   }
 }
 
