--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -398,6 +398,8 @@
 <script src="confetti.js"></script>
 
 <script>
+document.getElementById("body").style.overflowY = 'hidden';
+  
 function setCookie(name,value,days) {
     var expires = "";
     if (days) {
